schéma classes problèmes

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ calculabilite_INGI1123.out
 calculabilite_INGI1123.pdf
 calculabilite_INGI1123.synctex.gz
 calculabilite_INGI1123.toc
-
+calculabilite_INGI1123.fls
+calculabilite_INGI1123.fdb_latexmk
