Update Forked Repo (#6)
* Typo, grammaire et légers détails

* MAJ modèles

* schéma classes problèmes

* SAT : definition et exemple d'une formule propositionnelle satisfaisable

* fix(picture) : Reset fixed picture as default

567px-ChevreLoupSalade.jpg causes the build on travis to fail

* Correction: ch03 Rice theorem

Otherwise there are properties of the programs themselves that _can_ be decided.

* Better .gitignore

* 1e chapitre

* Ajout schéma & fix problèmes d'affichage

* [intro] update CM1 formatting

* Exercice framework

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,22 @@
-calculabilite_INGI1123.aux
-calculabilite_INGI1123.bbl
-calculabilite_INGI1123.blg
-calculabilite_INGI1123.log
-calculabilite_INGI1123.out
-calculabilite_INGI1123.pdf
-calculabilite_INGI1123.synctex.gz
-calculabilite_INGI1123.toc
 
+# LaTeX
+*.aux
+*.bbl
+*.blg
+*.dvi
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.synctex*
+*.toc
+*.pdf
+
+# Autre
+*.DS_store
+*~
+*tex#
+*.temp
+*.tmp
+*.swp
+*.bak
